--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         We have looked at pinterest to get inspo for our site. </p>
     <br>
     <h2>This is an example of what we are aiming for:</h2>
-    <div>
-        <img src="./images/websiteExample.jpeg" class="rounded mx-auto d-block">
+    <div class="text-center container-fluid">
+        <img src="./images/websiteExample.jpeg" class="img-fluid">
     </div>
 </main>
 
