--- a/wireframe.html
+++ b/wireframe.html
@@ -64,8 +64,8 @@
 
     <main>
         <h2>Landing Page</h2>
-        <div>
-            <img src="./images/Wireframe.png" class="rounded mx-auto d-block">
+        <div class="text-center container-fluid">
+            <img src="./images/Wireframe.png" class="img-fluid">
         </div>
     </main>
 
